tests/sumo/basic/tls/errors/invalid_state/errors.sumo
Error: Illegal character '0' in tlLogic '0', program 'broken' in phase 0
Quitting (on error).
